Added JaCoCo and Swagger support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.password=rootpw
 spring.jpa.properties.hibernate.dialect=org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 spring.jpa.database-platform=org.hibernate.spatial.dialect.mysql.MySQL8SpatialDialect
 spring.jpa.show-sql=true
+
+server.error.include-message=always
